# simple-renderer-3d

./: CMakeLists.txt  ProjectHome.md  bounds.tpp  clipping.cpp  clipping.h  depth_equation.cpp  numeric_utils.tpp  simple_renderer.cpp  vector_utils.tpp
examples/: CMakeLists.txt
trunk/: CMakeLists.txt  bounds.tpp  clipping.cpp  clipping.h  common_types.h  depth_equation.cpp  depth_equation.h  fill_polygon.cpp  fill_polygon.h  matrix_types.h  numeric_utils.tpp  simple_renderer.cpp  simple_renderer.h  vector_utils.tpp
trunk/examples/: CMakeLists.txt  foo.cpp
